textbookswap/tradeboard/static/tradeboard/css/tb_main.css
::-webkit-scrollbar {
  width: 7px;
  max-width: 7px;
  max-height: 7px;
  background-color: #f5f5f5;
}
::-webkit-scrollbar-track {
  background-color: #dfdfdf;
  border-radius: 10px;
}
::-webkit-scrollbar-thumb {
  background-color: #5371f2;
  border-radius: 10px;
  border: 1px solid white;
}
::-webkit-scrollbar-thumb:hover {
  background: #009;
}
em {
  font-family: "Futura";
  font-size: 0.75rem;
  font-weight: 500;
  font-style: normal;
  color: #273572;
}
button {
  cursor: pointer;
}
button:focus {
  outline: none;
}
select:not([multiple]) {
  -webkit-appearance: none;
  -moz-appearance: none;
  background-position: right 50%;
  background-repeat: no-repeat;
  background-image: url("../svg/down-arrow.svg");
}
select:focus {
  outline: none;
}
input:focus {
  outline: none;
}
p {
  margin: 0;
  padding: 0;
}
.spacer {
  flex: 1;
}
.nav-panels {
  height: 100%;
  display: flex;
  flex-direction: column;
}
body {
  background-image: radial-gradient(#0eb3fd 5%, transparent 11%);
  background-color: #f4f4f4;
  background-position: 0 0, 50px 50px;
  background-size: 20px 20px;
  background-attachment: fixed;
  margin: 0px;
  height: 100vh;
  display: flex;
  flex-direction: row;
  align-self: stretch;
}
html {
  overflow-y: hidden;
}
.panels {
  margin-top: 20px;
  display: flex;
  flex-direction: row;
  align-items: stretch;
  /* justify-content: center; */
}
.panels.blurred {
  pointer-events: none;
  animation: pullBack cubic-bezier(0.19, 1, 0.22, 1) 0.6s;
  -webkit-filter: blur(5px);
  -moz-filter: blur(5px);
  -o-filter: blur(5px);
  -ms-filter: blur(5px);
  filter: blur(5px);
  transform: scale(0.97, 0.97);
}
@keyframes pullBack {
  0% {
    transform: scale(1, 1);
  }
  100% {
    transform: scale(0.97, 0.97);
  }
}
.profile-section {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.profile-pic {
  width: 109px;
  height: 109px;
  object-fit: cover;
  overflow: hidden;
  border: 3px solid #ffffff;
  border-radius: 5px;
  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.35);
  z-index: 2;
  margin-bottom: -60px;
}
.profile-info {
  width: 222px;
  height: 220px;
  border-radius: 5px;
  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.35);
  background-color: #5371f2;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 20px;
}
.fl-users-name {
  margin-top: 70px;
  margin-bottom: 0px;
  font-family: "DIN Condensed";
  font-size: 1.3rem;
  color: white;
}
.mid-panel {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  margin: 0;
  margin-left: 50px;
  margin-right: 50px;
  padding: 0;
}
.arrange-as-row.tab-row {
  margin-top: 10px;
  align-items: center;
  justify-content: start;
}
.tab-bar {
  height: 50px;
  align-items: start;
  background-color: white;
  border-radius: 5px;
  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.35);
  margin-top: 0px;
  margin-left: 10px;
  width: 520px;
  margin-right: 0px;
  overflow: hidden;
  z-index: 2;
}
.tab-divider {
  border: 0;
  height: 2px;
  border-top: 3px solid #5371f2;
  margin-top: 10px;
  margin-right: 13px;
  margin-left: 13px;
}
.tab-divider-1 {
  border: 0;
  height: 2px;
  border-top: 3px solid #5371f2;
  margin: 2px 20px 2px 0;
}
.tab-bar.expanded {
  height: 106px;
  animation: tab-br-exp cubic-bezier(0.19, 1, 0.22, 1) 0.8s;
}
@keyframes tab-br-exp {
  0% {
    height: 50px;
  }
  100% {
    height: 106px;
  }
}
.tab-btn {
  background-color: white;
  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.35);
  border: none;
  border-radius: 3px;
  margin-left: 12px;
  margin-right: 4px;
  font-family: "DIN Condensed";
  font-size: 1.1em;
  font-weight: 700;
  color: #818181;
  padding: 4px 15px 2px 15px;
  height: 32px;
}
.extra {
  align-self: stretch;
  display: flex;
  flex-direction: column;
  align-items: stretch;
}
.question {
  margin-top: 5px;
  margin-left: 15px;
  font-family: "DIN condensed";
  font-size: 1.4rem;
  color: #273572;
}
.sell-btn {
  padding: 8px 20px 6px 20px;
  border-radius: 3px;
  border: 3px solid #5371f2;
  background: linear-gradient(40deg, #f7fcff 0%, #dce9ff 100%);
  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.35);
  font-family: "Courier Prime", monospace;
  font-size: 0.9rem;
  font-weight: 700;
  color: #5371f2;
  margin-right: 15px;
}
.active-tab {
  color: #273572;
  transform: scale(1.1, 1.1);
}
.mid-panel-scroll {
  scroll-snap-type: y mandatory;
  z-index: 1;
  overflow-x: hidden;
  align-self: stretch;
  min-width: 500px;
  display: flex;
  flex-direction: column;
  align-items: center;
  flex: 1;
}
.mid-panel-scroll::-webkit-scrollbar {
  margin-left: -70px;
  width: 7px;
  background-color: #f5f5f5;
}
.mid-panel-scroll::-webkit-scrollbar-track {
  margin-left: -70px;
  background-color: #dfdfdf;
  border-radius: 10px;
}
.mid-panel-scroll::-webkit-scrollbar-thumb {
  margin-left: -70px;
  background-color: #5371f2;
  border-radius: 10px;
  border: 1px solid white;
}
.mid-panel-scroll::-webkit-scrollbar-thumb:hover {
  margin-left: -70px;
  background: #009;
}
.post {
  padding: 8px 0 !important;
  scroll-snap-align: start;
  margin: 0 10px;
}
.post-minimized {
  display: flex;
  flex-direction: row;
  align-items: center;
}
.mini-left-tile {
  background-color: #ffffff;
  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.35);
  border-radius: 5px;
  width: 437px;
  height: 83px;
  margin-right: 10px;
}
.top-row {
  position: relative;
  display: flex;
  justify-content: space-between;
}
.book-title {
  margin-top: 15px;
  margin-left: 15px;
  margin-bottom: 0px;
  font-family: "DIN condensed";
  color: #273572;
  font-size: 1.4rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.book-title:hover {
  cursor: pointer;
}
a:link {
  text-decoration: none;
  color: #273572;
}
a:visited {
  color: #273572;
}
.date {
  font-family: "Futura";
  font-size: 0.4em;
  margin-top: 15px;
  margin-right: 15px;
  color: #d1d1d1;
}
/* ... */

